apps/keycloak/base/ingress.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: keycloak-gateway
spec:
  gatewayClassName: traefik
  listeners:
    - name: websecure
      port: 8443
      protocol: HTTPS
      hostname: keycloak.${BASE_DOMAIN}
      tls:
        certificateRefs:
          - name: tls-keycloak-ingress  # <==== Use the name defined in Certificate resource.
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: keycloak-http
spec:
  parentRefs:
    - name: keycloak-gateway
  hostnames:
    - keycloak.${BASE_DOMAIN}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: keycloak-service
          port: 8443
          weight: 1
